Deskripsi perubahan, misalnya: Update fitur auto chat

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@ TemplateMo 562 Space Dynamic
 https://templatemo.com/tm-562-space-dynamic
 
 -->
+    <style>
+      .hidden {
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+      }
+      .visible {
+        opacity: 1;
+      }
+    </style>
   </head>
 
 <body>
@@ -123,7 +132,7 @@ https://templatemo.com/tm-562-space-dynamic
                   <div class="icon">
                     <img src="assets/images/service-icon-01.png" alt="reporting">
                   </div>
-                  <div class="right-text">
+                  <div class="right-text hidden" id="rightText">
                     <h4>Data Analysis</h4>
                     <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
                   </div>
@@ -134,7 +143,7 @@ https://templatemo.com/tm-562-space-dynamic
                   <div class="icon">
                     <img src="assets/images/service-icon-02.png" alt="">
                   </div>
-                  <div class="right-text">
+                  <div class="right-text hidden" id="rightText">
                     <h4>Data Reporting</h4>
                     <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
                   </div>
@@ -145,7 +154,7 @@ https://templatemo.com/tm-562-space-dynamic
                   <div class="icon">
                     <img src="assets/images/service-icon-03.png" alt="">
                   </div>
-                  <div class="right-text">
+                  <div class="right-text hidden" id="rightText">
                     <h4>Web Analytics</h4>
                     <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
                   </div>
@@ -156,7 +165,7 @@ https://templatemo.com/tm-562-space-dynamic
                   <div class="icon">
                     <img src="assets/images/service-icon-04.png" alt="">
                   </div>
-                  <div class="right-text">
+                  <div class="right-text hidden" id="rightText">
                     <h4>SEO Suggestions</h4>
                     <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
                   </div>
@@ -226,11 +235,9 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-3 col-sm-6">
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-              <div class="hidden-content">
+              <div class="showed-content">
                 <h4>SEO Analysis</h4>
                 <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
-              </div>
-              <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
               </div>
             </div>
@@ -239,11 +246,9 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-3 col-sm-6">
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
-              <div class="hidden-content">
+              <div class="showed-content">
                 <h4>Website Reporting</h4>
                 <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
-              </div>
-              <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
               </div>
             </div>
@@ -252,11 +257,9 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-3 col-sm-6">
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.5s">
-              <div class="hidden-content">
+              <div class="showed-content">
                 <h4>Performance Tests</h4>
                 <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
-              </div>
-              <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
               </div>
             </div>
@@ -265,11 +268,9 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-3 col-sm-6">
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.6s">
-              <div class="hidden-content">
+              <div class="showed-content">
                 <h4>Data Analysis</h4>
                 <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
-              </div>
-              <div class="showed-content">
                 <img src="assets/images/portfolio-image.png" alt="">
               </div>
             </div>
@@ -421,6 +422,17 @@ https://templatemo.com/tm-562-space-dynamic
   <script src="assets/js/animation.js"></script>
   <script src="assets/js/imagesloaded.js"></script>
   <script src="assets/js/templatemo-custom.js"></script>
+
+  <script>
+    window.addEventListener('scroll', function() {
+      const rightText = document.getElementById('rightText');
+      const rect = rightText.getBoundingClientRect();
+      if (rect.top < window.innerHeight && rect.bottom >= 0) {
+        rightText.classList.add('visible');
+        rightText.classList.remove('hidden');
+      }
+    });
+  </script>
 
 </body>
 </html>
